--- a/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -46,7 +46,9 @@
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
     <Compile Include="Controller.cs" />
+    <Compile Include="FeedbackManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuggestionManager.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
