--- a/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
+    <Compile Include="BillsManager.cs" />
+    <Compile Include="NotificationManager.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="FeedbackManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
