--- a/SE_Project/UserInterfaceLayer/UserInterfaceLayer.csproj
+++ b/SE_Project/UserInterfaceLayer/UserInterfaceLayer.csproj
@@ -103,7 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="HomepageH.aspx" />
-    <Content Include="Contact.aspx" />
+    <Content Include="DelHomeowner.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -153,6 +153,9 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="HomepageA.aspx" />
+    <Content Include="IssueBills.aspx" />
+    <Content Include="NotifsIn.aspx" />
+    <Content Include="VeiwNotifs.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -196,12 +199,12 @@
       <DependentUpon>HomepageH.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Contact.aspx.cs">
-      <DependentUpon>Contact.aspx</DependentUpon>
+    <Compile Include="DelHomeowner.aspx.cs">
+      <DependentUpon>DelHomeowner.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Contact.aspx.designer.cs">
-      <DependentUpon>Contact.aspx</DependentUpon>
+    <Compile Include="DelHomeowner.aspx.designer.cs">
+      <DependentUpon>DelHomeowner.aspx</DependentUpon>
     </Compile>
     <Compile Include="LoginH.aspx.cs">
       <DependentUpon>LoginH.aspx</DependentUpon>
@@ -241,6 +244,27 @@
     </Compile>
     <Compile Include="HomepageA.aspx.designer.cs">
       <DependentUpon>HomepageA.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IssueBills.aspx.cs">
+      <DependentUpon>IssueBills.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IssueBills.aspx.designer.cs">
+      <DependentUpon>IssueBills.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="NotifsIn.aspx.cs">
+      <DependentUpon>NotifsIn.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NotifsIn.aspx.designer.cs">
+      <DependentUpon>NotifsIn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VeiwNotifs.aspx.cs">
+      <DependentUpon>VeiwNotifs.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VeiwNotifs.aspx.designer.cs">
+      <DependentUpon>VeiwNotifs.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
