--- a/SE_Project/UserInterfaceLayer/UserInterfaceLayer.csproj
+++ b/SE_Project/UserInterfaceLayer/UserInterfaceLayer.csproj
@@ -102,6 +102,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AddToCalandar.aspx" />
+    <Content Include="ChangePassword.aspx" />
     <Content Include="HomepageH.aspx" />
     <Content Include="DelHomeowner.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -184,13 +186,29 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+    <Content Include="ViewCommCal.aspx" />
     <Content Include="ViewSwitcher.ascx" />
+    <Content Include="ViewUserData.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddToCalandar.aspx.cs">
+      <DependentUpon>AddToCalandar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddToCalandar.aspx.designer.cs">
+      <DependentUpon>AddToCalandar.aspx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="ChangePassword.aspx.cs">
+      <DependentUpon>ChangePassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ChangePassword.aspx.designer.cs">
+      <DependentUpon>ChangePassword.aspx</DependentUpon>
+    </Compile>
     <Compile Include="HomepageH.aspx.cs">
       <DependentUpon>HomepageH.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -231,6 +249,13 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
+    <Compile Include="ViewCommCal.aspx.cs">
+      <DependentUpon>ViewCommCal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewCommCal.aspx.designer.cs">
+      <DependentUpon>ViewCommCal.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -265,6 +290,13 @@
     </Compile>
     <Compile Include="VeiwNotifs.aspx.designer.cs">
       <DependentUpon>VeiwNotifs.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ViewUserData.aspx.cs">
+      <DependentUpon>ViewUserData.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewUserData.aspx.designer.cs">
+      <DependentUpon>ViewUserData.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
