--- a/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Controller.cs" />
     <Compile Include="FeedbackManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceManager.cs" />
     <Compile Include="SuggestionManager.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
