--- a/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/SE_Project/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -51,6 +51,7 @@
     <Compile Include="NotificationManager.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="FeedbackManager.cs" />
+    <Compile Include="PollManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceManager.cs" />
     <Compile Include="SuggestionManager.cs" />
