--- a/SE_Project/UserInterfaceLayer/UserInterfaceLayer.csproj
+++ b/SE_Project/UserInterfaceLayer/UserInterfaceLayer.csproj
@@ -199,6 +199,7 @@
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
+    <Content Include="Web1.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddToCalandar.aspx.cs">
